crates/strider/tests/snapshots/v2__x86_kernel__calling_convention__sink16.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nXMM0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="init\nST0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="arg[1] ← EDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "7" -> "3" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "8" -> "3" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "8" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "9" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "10" -> "8" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "10" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "11" -> "10" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "12" -> "10" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "12" [label="const 0x100000034:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "11" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "13" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v14" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v14" -> "9" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "15" -> "9" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "15" [label="arg[0] ← EAX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "16" -> "7" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "17" -> "7" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "17" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "9" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "18" -> "17" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "18" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "11" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "19" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x100000030:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "16" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "20" -> "16" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "21" -> "16" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "21" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "9" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "22" -> "21" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "22" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "11" -> "22" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "23" -> "22" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0x10000002c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "20" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "24" -> "20" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "25" -> "20" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "25" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "9" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "26" -> "25" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "26" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "11" -> "26" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "27" -> "26" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "27" [label="const 0x100000028:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "24" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "28" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "29" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "29" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "9" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "30" -> "29" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "30" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "11" -> "30" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "31" -> "30" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "31" [label="const 0x100000024:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "28" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "32" -> "28" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "33" -> "28" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "33" [label="arg[10] ← ram[sp + 32]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "32" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "34" -> "32" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "35" -> "32" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "35" [label="arg[9] ← ram[sp + 28]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "34" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "36" -> "34" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "37" -> "34" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "37" [label="arg[8] ← ram[sp + 24]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "36" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "38" -> "36" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "39" -> "36" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "39" [label="arg[7] ← ram[sp + 20]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "38" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "40" -> "38" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "41" -> "38" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "41" [label="arg[6] ← ram[sp + 16]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "40" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "42" -> "40" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "43" -> "40" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "43" [label="arg[5] ← ram[sp + 12]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "42" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "44" -> "42" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "45" -> "42" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="arg[4] ← ram[sp + 8]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "44" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "46" -> "44" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "47" -> "44" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "47" [label="arg[3] ← ram[sp + 4]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "46" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "48" -> "46" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "49" -> "46" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "49" [label="arg[2] ← ECX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "48" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "15" -> "48" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "4" -> "48" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "2" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "50" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v51" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v51" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "3" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "50" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "9" -> "50" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v52" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v52" -> "50" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "53" -> "50" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "53" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
